--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "prisma": "^5.18.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.2"
